--- a/todos/application/views/index.html
+++ b/todos/application/views/index.html
@@ -1,15 +1,34 @@
 {{define "head"}}{{end}}
 {{define "body"}}
 	<h1>Todos</h1>
+		<div class="row">			
+			{{ range $flash := .Data.FlashMessage}}
+				<div class="alert alert-success" role="alert">
+				    {{$flash}}
+		    	</div>
+			{{end}}			
+		</div>
 		<div class="row">
-			<form class="form" action="/todo" method="post">
+			<form class="form" action="/create" method="post">
 			  <div class="form-group">
+			  	<input type="hidden" name="id" />
 			    <label for="todo">TODO:</label>
-			    <input type="text" class="form-control" name="todo" id="todo" placeholder="Type todo">
+			    <input type="text" class="form-control" name="title" id="todo" placeholder="Type todo">
 			  </div>				
 			 	<button type="submit" class="btn btn-primary">Add</button>			 	
 			 </form>
 		</div>
+		<div class="row">
+			<ul class="list-group">
+				{{ range $todo := .Data.Todos}}
+					<li class="list-group-item">						
+						<span class="badge">{{ if eq $todo.isdone "true" }} Done {{else}} Not Done {{end}}</span>
+						{{$todo.title}}
+					</li>
+				{{end}}
+			</ul>
+		</div>
+
 	
 
 {{end}}
