--- a/todos/application/views/index.html
+++ b/todos/application/views/index.html
@@ -22,7 +22,9 @@
 			<ul class="list-group">
 				{{ range $todo := .Data.Todos}}
 					<li class="list-group-item">						
-						<span class="badge">{{ if eq $todo.isdone "true" }} Done {{else}} Not Done {{end}}</span>
+						<span class="badge">{{ if eq $todo.isdone "true" }} Done {{else}} Not Done{{end}}</span>
+						{{ if eq $todo.isdone "false"}}<a class="btn btn-primary" href="/done/{{$todo.todoid}}">Done</a>{{end}}
+
 						{{$todo.title}}
 					</li>
 				{{end}}
